--- a/VisualizationScript.ipynb
+++ b/VisualizationScript.ipynb
@@ -517,30 +517,30 @@
     }
    ],
    "source": [
-    "# some options\n",
-    "a, b = 1, 5\n",
-    "# selecting global variables without underscores\n",
-    "global_variables = list(globals().keys())\n",
-    "funcs = []\n",
-    "for i in global_variables:\n",
-    "    if '_' not in i:\n",
-    "        funcs.append(i)\n",
+    "# # some options\n",
+    "# a, b = 1, 5\n",
+    "# # selecting global variables without underscores\n",
+    "# global_variables = list(globals().keys())\n",
+    "# funcs = []\n",
+    "# for i in global_variables:\n",
+    "#     if '_' not in i:\n",
+    "#         funcs.append(i)\n",
     " \n",
-    "# creating menu with them   \n",
-    "global_vars = widgets.Dropdown(\n",
-    "    options=funcs)\n",
-    "# button, output, function and linkage\n",
-    "butt = widgets.Button(description='Print Variable')\n",
-    "outt = widgets.Output()\n",
-    "def on_butt_clicked(b):\n",
-    "    with outt:\n",
-    "        clear_output()\n",
-    "        print(type(globals()[global_vars.value]))\n",
-    "        print(globals()[global_vars.value])\n",
+    "# # creating menu with them   \n",
+    "# global_vars = widgets.Dropdown(\n",
+    "#     options=funcs)\n",
+    "# # button, output, function and linkage\n",
+    "# butt = widgets.Button(description='Print Variable')\n",
+    "# outt = widgets.Output()\n",
+    "# def on_butt_clicked(b):\n",
+    "#     with outt:\n",
+    "#         clear_output()\n",
+    "#         print(type(globals()[global_vars.value]))\n",
+    "#         print(globals()[global_vars.value])\n",
     "        \n",
-    "butt.on_click(on_butt_clicked)\n",
-    "# display\n",
-    "widgets.VBox([global_vars,butt,outt])"
+    "# butt.on_click(on_butt_clicked)\n",
+    "# # display\n",
+    "# widgets.VBox([global_vars,butt,outt])"
    ]
   },
   {
